Use uncalled functions to defer day 7 in alternate solution

--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -249,7 +249,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 39,
    "metadata": {
     "collapsed": false
    },
@@ -269,97 +269,39 @@
     "input = get_input(day)\n",
     "\n",
     "import re\n",
-    "from collections import defaultdict\n",
-    "from functools import partial\n",
-    "from operator import inv, and_, or_, lshift, rshift\n",
-    "\n",
-    "# Probably some deferred library out there, oh well\n",
-    "class Deferred(object):\n",
-    "    def __init__(self, val=None):\n",
-    "        self.callbacks = []\n",
-    "        self.val = val\n",
-    "    \n",
-    "    def add_callback(self, callback):\n",
-    "        self.callbacks.append(callback)\n",
-    "        if self.val is not None:\n",
-    "            callback(self.val)\n",
-    "    \n",
-    "    def callback(self, val):\n",
-    "        self.val = val\n",
-    "        for callback in self.callbacks:\n",
-    "            callback(self.val)\n",
-    "\n",
-    "class Node(object):\n",
-    "    def __init__(self, a=None, op=None, b=None):\n",
-    "        self.a = None\n",
-    "        self.op = op\n",
-    "        self.b = None\n",
-    "        def callback(self, attr, val):\n",
-    "            setattr(self, attr, val)\n",
-    "        if a:\n",
-    "            a.add_callback(partial(callback, self, 'a'))\n",
-    "        if b:\n",
-    "            b.add_callback(partial(callback, self, 'b'))\n",
-    "        self.val = None\n",
-    "        self.dirty = False\n",
-    "\n",
-    "    def get_val(self):\n",
-    "        self.dirty = True\n",
-    "        def get_param(v):\n",
-    "            return v if isinstance(v, int) else v.get_val()\n",
-    "        if self.val:\n",
-    "            pass\n",
-    "        elif not self.a and not self.op:\n",
-    "            self.val = get_param(self.b)\n",
-    "        elif not self.a:\n",
-    "            self.val = self.op(get_param(self.b))\n",
-    "        else:\n",
-    "            self.val = self.op(get_param(self.a),\n",
-    "                               get_param(self.b))\n",
-    "        return self.val\n",
-    "    \n",
-    "    def rebuild(self):\n",
-    "        self.val = None\n",
-    "        self.dirty = False\n",
-    "        if isinstance(self.a, Node) and self.a.dirty:\n",
-    "            self.a.rebuild()\n",
-    "        if isinstance(self.b, Node) and self.b.dirty:\n",
-    "            self.b.rebuild()\n",
-    "        \n",
+    "from functools import partial, reduce\n",
     "\n",
     "ops = {\n",
-    "    'NOT': inv,\n",
-    "    'AND': and_,\n",
-    "    'OR': or_,\n",
-    "    'LSHIFT': lshift,\n",
-    "    'RSHIFT': rshift,\n",
+    "    'NOT': '~',\n",
+    "    'AND': '&',\n",
+    "    'OR': '|',\n",
+    "    'LSHIFT': '<<',\n",
+    "    'RSHIFT': '>>',\n",
     "}\n",
     "\n",
-    "def _int(n):\n",
-    "    try:\n",
-    "        return int(n)\n",
-    "    except (ValueError, TypeError):\n",
-    "        return n\n",
+    "def memoize(f):\n",
+    "    class memodict(dict):\n",
+    "        def __missing__(self, key):\n",
+    "            ret = self[key] = f(key)\n",
+    "            return ret \n",
+    "    return memodict().__getitem__\n",
     "\n",
-    "def init_node_tree(input):\n",
-    "    m = defaultdict(Deferred)\n",
+    "def build_wires(input):\n",
+    "    wires = {}\n",
     "    for line in input.split('\\n'):\n",
-    "        r = re.match(r'(?:(?:(\\S+) )?(\\S+) )?(\\S+) -> (\\S+)', line)\n",
-    "        a, op, b, v = r.group(1, 2, 3, 4)\n",
-    "        a = _int(a)\n",
-    "        b = _int(b)\n",
-    "        a = Deferred(a) if isinstance(a, int) else m[a]\n",
-    "        b = Deferred(b) if isinstance(b, int) else m[b]\n",
-    "        m[v].callback(Node(a, ops.get(op), b))\n",
-    "    return m\n",
+    "        rhs, w = re.match(r'(.+) -> (\\S+)', line).group(1, 2)\n",
+    "        rhs = reduce(lambda x, y: x.replace(y[0], y[1]), ops.items(), rhs)\n",
+    "        rhs = re.sub(r'([a-z]+)', 'wires[\"\\\\1\"]()', rhs)\n",
+    "        wires[w] = partial(memoize(eval), rhs)\n",
+    "    return wires\n",
     "\n",
-    "nodes = init_node_tree(input)\n",
-    "ans1 = nodes['a'].val.get_val()\n",
+    "wires = build_wires(input)\n",
+    "ans1 = wires['a']()\n",
     "print(ans1)\n",
     "\n",
-    "nodes['a'].val.rebuild()\n",
-    "nodes['b'].callback(ans1)\n",
-    "print(nodes['a'].val.get_val())"
+    "wires = build_wires(input)\n",
+    "wires['b'] = lambda: ans1\n",
+    "print(wires['a']())"
    ]
   },
   {
