--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -249,20 +249,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "46065\n",
-      "14134\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Alternate Day 7\n",
     "day = 7\n",
@@ -336,20 +327,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "207\n",
-      "804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 9\n",
     "input = get_input(day)\n",
@@ -381,20 +363,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "252594\n",
-      "3579328\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 10\n",
     "input = get_input(day)\n",
@@ -413,6 +386,88 @@
     "for _ in range(50):\n",
     "    p2 = look_and_say(p2)\n",
     "print(len(p2))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "day = 11\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "def incr_str(s):\n",
+    "    c = 1\n",
+    "    i = len(s) - 1\n",
+    "    _s = ''\n",
+    "    while c > 0 and i >= 0:\n",
+    "        _s = chr(max(ord('a'), (ord(s[i])+1) % (ord('z')+1))) + _s\n",
+    "        c = 1 if _s[0] == 'a' else 0\n",
+    "        i -= 1\n",
+    "    _s = s[:i+1] + _s\n",
+    "    return _s\n",
+    "\n",
+    "def has_reqs(s):\n",
+    "    x = 'abcdefghijklmnopqrstuvwxyz'\n",
+    "    return any(z in s for z in [''.join(y) for y in zip(x, x[1:], x[2:])]) \\\n",
+    "           and 'i' not in s and 'o' not in s and 'l' not in s \\\n",
+    "           and len(re.findall(r'(.)\\1', s)) > 1\n",
+    "\n",
+    "pw = incr_str(input)\n",
+    "while not has_reqs(pw):\n",
+    "    pw = incr_str(pw)\n",
+    "print(pw)\n",
+    "\n",
+    "pw = incr_str(pw)\n",
+    "while not has_reqs(pw):\n",
+    "    pw = incr_str(pw)\n",
+    "print(pw)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "156366\n",
+      "96852\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 12\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import json\n",
+    "import re\n",
+    "\n",
+    "nums = map(int, re.findall('-?\\d+', input))\n",
+    "print(sum(nums))\n",
+    "\n",
+    "def get_numbers(obj, noval=None):\n",
+    "    if isinstance(obj, list):\n",
+    "        return sum(get_numbers(n) for n in obj)\n",
+    "    elif isinstance(obj, dict):\n",
+    "        if noval is None or noval not in obj.values():\n",
+    "            return sum(get_numbers(n) for n in obj.values())\n",
+    "    elif isinstance(obj, int):\n",
+    "        return obj\n",
+    "    return 0\n",
+    "\n",
+    "s = sum(x for x in atomic_values(json.loads(input), noval='red') \n",
+    "        if isinstance(x, int))\n",
+    "print(s)"
    ]
   },
   {
