--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -431,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -452,22 +452,17 @@
     "import json\n",
     "import re\n",
     "\n",
-    "nums = map(int, re.findall('-?\\d+', input))\n",
-    "print(sum(nums))\n",
+    "def find_ints(s):\n",
+    "    return map(int, re.findall('-?\\d+', s))\n",
     "\n",
-    "def get_numbers(obj, noval=None):\n",
-    "    if isinstance(obj, list):\n",
-    "        return sum(get_numbers(n) for n in obj)\n",
-    "    elif isinstance(obj, dict):\n",
-    "        if noval is None or noval not in obj.values():\n",
-    "            return sum(get_numbers(n) for n in obj.values())\n",
-    "    elif isinstance(obj, int):\n",
-    "        return obj\n",
-    "    return 0\n",
+    "print(sum(find_ints(input)))\n",
     "\n",
-    "s = sum(x for x in atomic_values(json.loads(input), noval='red') \n",
-    "        if isinstance(x, int))\n",
-    "print(s)"
+    "def remove_red(obj):\n",
+    "    if \"red\" in obj.values():\n",
+    "        return {}\n",
+    "    return obj\n",
+    "\n",
+    "print(sum(find_ints(str(json.loads(input, object_hook=remove_red)))))"
    ]
   },
   {
@@ -496,7 +491,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.0"
+   "version": "3.5.1"
   }
  },
  "nbformat": 4,
