--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -255,7 +255,7 @@
    },
    "outputs": [],
    "source": [
-    "# Alternate Day 7\n",
+    "# Alternate (way better) Day 7\n",
     "day = 7\n",
     "input = get_input(day)\n",
     "\n",
@@ -306,8 +306,6 @@
     "day = 8\n",
     "input = get_input(day)\n",
     "\n",
-    "import re\n",
-    "\n",
     "s = 0\n",
     "for line in input.split('\\n'):\n",
     "    s += len(line)\n",
@@ -315,23 +313,27 @@
     "# Part 1\n",
     "print(s)\n",
     "\n",
-    "s = 0\n",
-    "for line in input.split('\\n'):\n",
-    "    s += len(re.escape(line))\n",
-    "    s += 2 # surrounding quotes\n",
-    "    s -= len(line)\n",
-    "\n",
     "# Part 2\n",
-    "print(s)"
+    "print(sum(2 + line.count('\"') + line.count('\\\\')\n",
+    "          for line in input.split('\\n')))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "207\n",
+      "804\n"
+     ]
+    }
+   ],
    "source": [
     "day = 9\n",
     "input = get_input(day)\n",
@@ -431,20 +433,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "156366\n",
-      "96852\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 12\n",
     "input = get_input(day)\n",
@@ -463,6 +456,53 @@
     "    return obj\n",
     "\n",
     "print(sum(find_ints(str(json.loads(input, object_hook=remove_red)))))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "664\n",
+      "640\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 13\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "from collections import defaultdict\n",
+    "from itertools import permutations\n",
+    "\n",
+    "m = defaultdict(dict)\n",
+    "for line in input.split('\\n'):\n",
+    "    x = re.match(r'(\\S+) would (lose|gain) (\\d+) happiness units by sitting next to (\\S+)\\.', line)\n",
+    "    p1, op, ch, p2 = x.group(1, 2, 3, 4)\n",
+    "    m[p1][p2] = -int(ch) if op == 'lose' else int(ch)\n",
+    "\n",
+    "def find_max_happiness(m):\n",
+    "    maxhappiness = 0\n",
+    "    for ordering in permutations(m.keys()):\n",
+    "        happiness = sum(m[a][b]+m[b][a] for a, b in zip(ordering, ordering[1:]))\n",
+    "        happiness += m[ordering[0]][ordering[-1]] + m[ordering[-1]][ordering[0]]\n",
+    "        maxhappiness = max(maxhappiness, happiness)\n",
+    "    return maxhappiness\n",
+    "\n",
+    "print(find_max_happiness(m))\n",
+    "    \n",
+    "for k in list(m.keys()):\n",
+    "    m['me'][k] = 0\n",
+    "    m[k]['me'] = 0\n",
+    "\n",
+    "print(find_max_happiness(m))"
    ]
   },
   {
