--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -320,20 +320,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "207\n",
-      "804\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 9\n",
     "input = get_input(day)\n",
@@ -460,20 +451,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "664\n",
-      "640\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 13\n",
     "input = get_input(day)\n",
@@ -503,6 +485,63 @@
     "    m[k]['me'] = 0\n",
     "\n",
     "print(find_max_happiness(m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2640\n",
+      "1102\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 14\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "from collections import Counter\n",
+    "from itertools import accumulate, repeat, cycle, islice, chain\n",
+    "\n",
+    "class Reindeer(object):\n",
+    "    def __init__(self, name, speed, fly_time, rest_time):\n",
+    "        self.name = name\n",
+    "        self.speed = speed\n",
+    "        self.fly_time = fly_time\n",
+    "        self.rest_time = rest_time\n",
+    "\n",
+    "total = 2503\n",
+    "m = {}\n",
+    "\n",
+    "for line in input.split('\\n'):\n",
+    "    x = re.match('(\\S+) .* (\\d+) .* (\\d+) .* (\\d+) .*\\.', line)\n",
+    "    name, speed, t1, t2 = x.group(1, 2, 3, 4)\n",
+    "    speed, t1, t2 = int(speed), int(t1), int(t2)\n",
+    "    m[name] = Reindeer(name, speed, t1, t2)\n",
+    "\n",
+    "dists = {}\n",
+    "for k, v in m.items():\n",
+    "    period = v.fly_time + v.rest_time\n",
+    "    dists[k] = v.speed * (v.fly_time * (total // period) + min(total % period, v.fly_time))\n",
+    "print(max(dists.values()))\n",
+    "\n",
+    "dist_stages = {}\n",
+    "for k,v in m.items():\n",
+    "    speed_stages = cycle(chain(repeat(v.speed, v.fly_time), \n",
+    "                               repeat(0, v.rest_time)))\n",
+    "    dist_stages[k] = islice(accumulate(speed_stages), total)\n",
+    "\n",
+    "scores = [i for a in zip(*dist_stages.values()) \n",
+    "          for i, v in enumerate(a) if v == max(a)]\n",
+    "print(max(Counter(scores).values()))\n"
    ]
   },
   {
