--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -546,6 +546,55 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 86,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21367368\n",
+      "1766400\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 15\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "import numpy as np\n",
+    "\n",
+    "from functools import reduce\n",
+    "from operator import mul\n",
+    "\n",
+    "m = []\n",
+    "for line in input.split('\\n'):\n",
+    "    c, d, f, t, cal = map(int, re.findall('-?\\d+', line))\n",
+    "    m.append([c, d, f, t, cal])\n",
+    "m = np.array(m)\n",
+    "\n",
+    "def min_zero_sum(*ns):\n",
+    "    return max(0, sum(ns))\n",
+    "\n",
+    "scores = [(reduce(mul, map(min_zero_sum, \n",
+    "                          *map(mul, [i, j, k, l], m[:, :-1]))),\n",
+    "           sum(map(mul, [i, j, k, l], m[:, -1])))\n",
+    "          for i in range(101) \n",
+    "          for j in range(0, 101-i) \n",
+    "          for k in range(0, 101-j-i) \n",
+    "          for l in [100 - i - j - k]]\n",
+    "# Part 1\n",
+    "print(max(s[0] for s in scores))\n",
+    "\n",
+    "# Part 2\n",
+    "print(max(s[0] for s in scores if s[1] == 500))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
