--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -489,20 +489,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "2640\n",
-      "1102\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 14\n",
     "input = get_input(day)\n",
@@ -546,7 +537,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -580,7 +571,7 @@
     "    return max(0, sum(ns))\n",
     "\n",
     "scores = [(reduce(mul, map(min_zero_sum, \n",
-    "                          *map(mul, [i, j, k, l], m[:, :-1]))),\n",
+    "                           *map(mul, [i, j, k, l], m[:, :-1]))),\n",
     "           sum(map(mul, [i, j, k, l], m[:, -1])))\n",
     "          for i in range(101) \n",
     "          for j in range(0, 101-i) \n",
@@ -591,6 +582,61 @@
     "\n",
     "# Part 2\n",
     "print(max(s[0] for s in scores if s[1] == 500))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "21367368\n",
+      "1766400\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Alternate Day 15\n",
+    "day = 15\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "import numpy as np\n",
+    "\n",
+    "from sympy import symbol\n",
+    "from scipy.optimize import minimize\n",
+    "\n",
+    "from functools import reduce\n",
+    "from operator import mul\n",
+    "\n",
+    "m = []\n",
+    "for line in input.split('\\n'):\n",
+    "    c, d, f, t, cal = map(int, re.findall('-?\\d+', line))\n",
+    "    m.append([c, d, f, t, cal])\n",
+    "m = np.array(m)\n",
+    "\n",
+    "a, b, c, d = symbols('a b c d')\n",
+    "totals = [sum(x) for x in m[:,:-1].transpose()*np.array([a, b, c, d])]\n",
+    "expr = reduce(mul, totals)\n",
+    "def f(x):\n",
+    "    return -expr.subs({a: x[0], b: x[1], c: x[2], d: x[3]})\n",
+    "def rf(x):\n",
+    "    return expr.subs({a: x[0], b: x[1], c: x[2], d: x[3]})\n",
+    "ineqs = [lambda x: t.subs({a: x[0], b: x[1], c: x[2], d: x[3]}) for t in totals]\n",
+    "eqs = [lambda x: sum(x)-100]\n",
+    "cons = [{'type': 'eq', 'fun': x} for x in eqs] + [{'type': 'ineq', 'fun': x} for x in ineqs]\n",
+    "res = minimize(f, [25, 25, 25, 25], bounds=[(0,100), (0,100), (0,100), (0,100)], constraints=cons)\n",
+    "sol1 = rf([int(round(x)) for x in res.x])\n",
+    "print(sol1)\n",
+    "cons += [{'type': 'eq', 'fun': lambda x: sum(m[:,-1]*np.array([a, b, c, d])).subs({a: x[0], b: x[1], c: x[2], d: x[3]})-500}]\n",
+    "res = minimize(f, [0, 0, 100, 0], bounds=[(0,100), (0,100), (0,100), (0,100)], constraints=cons)\n",
+    "sol2 = rf([int(round(x)) for x in res.x])\n",
+    "print(sol2)\n"
    ]
   },
   {
