--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {
     "collapsed": true
    },
@@ -637,6 +637,75 @@
     "res = minimize(f, [0, 0, 100, 0], bounds=[(0,100), (0,100), (0,100), (0,100)], constraints=cons)\n",
     "sol2 = rf([int(round(x)) for x in res.x])\n",
     "print(sol2)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "373\n",
+      "260\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 16\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "m = []\n",
+    "for line in input.split('\\n'):\n",
+    "    x = re.match(r'Sue \\d+: ([a-z]+): (\\d+), ([a-z]+): (\\d+), ([a-z]+): (\\d+)', line)\n",
+    "    k1, a1, k2, a2, k3, a3 = x.group(1, 2, 3, 4, 5, 6, 7)\n",
+    "    a1, a2, a3 = int(a1), int(a2), int(a3)\n",
+    "    m.append({k1: a1, k2: a2, k3: a3})\n",
+    "\n",
+    "tape = {\n",
+    "    'children': 3,\n",
+    "    'cats': 7,\n",
+    "    'samoyeds': 2,\n",
+    "    'pomeranians': 3,\n",
+    "    'akitas': 0,\n",
+    "    'vizslas': 0,\n",
+    "    'goldfish': 5,\n",
+    "    'trees': 3,\n",
+    "    'cars': 2,\n",
+    "    'perfumes': 1,\n",
+    "}\n",
+    "\n",
+    "def could_match(aunt):\n",
+    "    return all(tape[k] == v for k,v in aunt.items())\n",
+    "\n",
+    "aunts = [i+1 for i,x in enumerate(m)\n",
+    "         if could_match(x)]\n",
+    "assert len(aunts) == 1\n",
+    "print(aunts[0])\n",
+    "\n",
+    "def could_match2(aunt):\n",
+    "    for k,v in aunt.items():\n",
+    "        if k in ['cats', 'trees']:\n",
+    "            if tape[k] >= v:\n",
+    "                return False\n",
+    "        elif k in ['pomeranians', 'goldfish']:\n",
+    "            if tape[k] <= v:\n",
+    "                return False\n",
+    "        else:\n",
+    "            if tape[k] != v:\n",
+    "                return False\n",
+    "    return True\n",
+    "\n",
+    "aunts = [i+1 for i,x in enumerate(m)\n",
+    "         if could_match2(x)]\n",
+    "assert len(aunts) == 1\n",
+    "print(aunts[0])"
    ]
   },
   {
