--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 1,
    "metadata": {
     "collapsed": true
    },
@@ -641,7 +641,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -662,9 +662,8 @@
     "import re\n",
     "\n",
     "m = []\n",
-    "for line in input.split('\\n'):\n",
-    "    x = re.match(r'Sue \\d+: ([a-z]+): (\\d+), ([a-z]+): (\\d+), ([a-z]+): (\\d+)', line)\n",
-    "    k1, a1, k2, a2, k3, a3 = x.group(1, 2, 3, 4, 5, 6, 7)\n",
+    "pattern = r'Sue \\d+: ([a-z]+): (\\d+), ([a-z]+): (\\d+), ([a-z]+): (\\d+)'\n",
+    "for k1, a1, k2, a2, k3, a3 in re.findall(pattern, input):\n",
     "    a1, a2, a3 = int(a1), int(a2), int(a3)\n",
     "    m.append({k1: a1, k2: a2, k3: a3})\n",
     "\n",
@@ -706,6 +705,47 @@
     "         if could_match2(x)]\n",
     "assert len(aunts) == 1\n",
     "print(aunts[0])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1304\n",
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 17\n",
+    "input = get_input(day)\n",
+    "\n",
+    "from itertools import combinations\n",
+    "\n",
+    "m = [int(line) for line in input.split('\\n')]\n",
+    "\n",
+    "# Part 1 - Sum the number of all combinations that hold 150 L.\n",
+    "total = 0\n",
+    "for i in range(1, len(m)+1):\n",
+    "    total += len([x for x in combinations(m, i) if sum(x) == 150])\n",
+    "print(total)\n",
+    "\n",
+    "# Part 2 - Break at the first combination that holds 150 L,\n",
+    "#    that's the smallest. Then just print the total as that's\n",
+    "#    the number of ways you can store 150 L in those containers.\n",
+    "total = 0\n",
+    "for i in range(1, len(m)+1):\n",
+    "    total += len([x for x in combinations(m, i) if sum(x) == 150])\n",
+    "    if total:\n",
+    "        break\n",
+    "print(total)"
    ]
   },
   {
