--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -98,21 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117946\n",
-      "3938038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 4\n",
     "input = get_input(day)\n",
@@ -546,20 +537,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21367368\n",
-      "1766400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 15\n",
     "input = get_input(day)\n",
@@ -595,20 +577,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "21367368\n",
-      "1766400\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Alternate Day 15\n",
     "day = 15\n",
@@ -650,20 +623,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "373\n",
-      "260\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 16\n",
     "input = get_input(day)\n",
@@ -718,20 +682,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1304\n",
-      "18\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 17\n",
     "input = get_input(day)\n",
@@ -755,6 +710,59 @@
     "    if total:\n",
     "        break\n",
     "print(total)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "886\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 18\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import copy\n",
+    "\n",
+    "def adj(i, j):\n",
+    "    return [(x, y) for x in [i-1, i, i+1]\n",
+    "            for y in [j-1, j, j+1] \n",
+    "            if 0 <= x < 100 and 0 <= y < 100 and (i, j) != (x, y)]\n",
+    "\n",
+    "def next_state(m):\n",
+    "    n = copy.deepcopy(m)\n",
+    "    for i in range(100):\n",
+    "        for j in range(100):\n",
+    "            states = [m[x][y] for x, y in adj(i, j)]\n",
+    "            if m[i][j] == '#' and states.count('#') not in [2, 3]:\n",
+    "                n[i][j] = '.'\n",
+    "            if m[i][j] == '.' and states.count('#') == 3:\n",
+    "                n[i][j] = '#'\n",
+    "    n[0][0] = '#'\n",
+    "    n[0][99] = '#'\n",
+    "    n[99][0] = '#'\n",
+    "    n[99][99] = '#'\n",
+    "    return n\n",
+    "    \n",
+    "m = []\n",
+    "for line in input.split('\\n'):\n",
+    "    m.append([c for c in line])\n",
+    "m[0][0] = '#'\n",
+    "m[0][99] = '#'\n",
+    "m[99][0] = '#'\n",
+    "m[99][99] = '#'\n",
+    "for _ in range(100):\n",
+    "    m = next_state(m)\n",
+    "print(sum(row.count('#') for row in m))"
    ]
   },
   {
