--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -98,12 +98,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "117946\n",
+      "3938038\n"
+     ]
+    }
+   ],
    "source": [
     "day = 4\n",
     "input = get_input(day)\n",
@@ -112,8 +121,8 @@
     "from itertools import count\n",
     "\n",
     "def f(s):\n",
-    "    for i in count(1):\n",
-    "        if hashlib.md5((input + str(i)).encode('utf-8')).hexdigest().startswith(s):\n",
+    "    for i in map(str, count(1)):\n",
+    "        if hashlib.md5((input + i).encode('utf-8')).hexdigest().startswith(s):\n",
     "            return i\n",
     "\n",
     "print(f(\"00000\"))\n",
@@ -763,6 +772,89 @@
     "for _ in range(100):\n",
     "    m = next_state(m)\n",
     "print(sum(row.count('#') for row in m))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "509\n",
+      "195\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 19\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import re\n",
+    "\n",
+    "molecule = input.split('\\n')[-1]\n",
+    "reps = [m for m in re.findall(r'(\\w+) => (\\w+)', input)]\n",
+    "def single_reps(s, src, dest):\n",
+    "    pieces = s.split(src)\n",
+    "    return (src.join(pieces[:i] + [pieces[i]+dest+pieces[i+1]] + pieces[i+2:])\n",
+    "            for i in range(len(pieces)-1))\n",
+    "def all_reps(s):\n",
+    "    for k, v in reps:\n",
+    "        yield from single_reps(s, k, v)\n",
+    "print(len(set(all_reps(molecule))))\n",
+    "\n",
+    "molecule = input.split('\\n')[-1][::-1]\n",
+    "reps = {m[1][::-1]: m[0][::-1] \n",
+    "        for m in re.findall(r'(\\w+) => (\\w+)', input)}\n",
+    "def rep(x):\n",
+    "    return reps[x.group()]\n",
+    "\n",
+    "count = 0\n",
+    "while molecule != 'e':\n",
+    "    molecule = re.sub('|'.join(reps.keys()), rep, molecule, 1)\n",
+    "    count += 1\n",
+    "\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "786240\n",
+      "831600\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 20\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "\n",
+    "min_presents = int(input)\n",
+    "\n",
+    "def f(lim=lambda x: 1000000, mult=10):\n",
+    "    houses = np.zeros(1000000)\n",
+    "    for i in range(1, 1000000):\n",
+    "        houses[i:lim(i):i] += i*mult\n",
+    "    return houses\n",
+    "\n",
+    "print(next(i for i, v in enumerate(f()) if v >= min_presents))\n",
+    "\n",
+    "print(next(i for i, v in enumerate(f(lambda x: 50*x+1, 11))\n",
+    "            if v >= min_presents))\n"
    ]
   },
   {
