--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -859,12 +859,178 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "121\n",
+      "201\n"
+     ]
+    }
+   ],
+   "source": [
+    "day = 21\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from math import ceil\n",
+    "from collections import Counter, defaultdict\n",
+    "from copy import deepcopy\n",
+    "from functools import reduce, partial\n",
+    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
+    "from operator import add, mul, truediv, floordiv, sub\n",
+    "\n",
+    "def product(i):\n",
+    "    return reduce(mul, i)\n",
+    "\n",
+    "shop1 = {\n",
+    "    \"Dagger\": (8, 4, 0),\n",
+    "    \"Shortsword\": (10, 5, 0),\n",
+    "    \"Warhammer\": (25, 6, 0),\n",
+    "    \"Longsword\": (40, 7, 0),\n",
+    "    \"Greataxe\": (74, 8, 0),\n",
+    "}\n",
+    "\n",
+    "shop2 = {\n",
+    "    \"Leather\": (13, 0, 1),\n",
+    "    \"Chainmail\": (31, 0, 2),\n",
+    "    \"Splintmail\": (53, 0, 3),\n",
+    "    \"Bandedmail\": (75, 0, 4),\n",
+    "    \"Platemail\": (102, 0, 5),\n",
+    "}\n",
+    "\n",
+    "shop3 = { \n",
+    "    \"D1\": (25, 1, 0),\n",
+    "    \"D2\": (50, 2, 0),\n",
+    "    \"D3\": (100, 3, 0),\n",
+    "    \"De1\": (20, 0, 1),\n",
+    "    \"De2\": (40, 0, 2),\n",
+    "    \"De3\": (80, 0, 3),\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def p1():\n",
+    "    for c1,d1,_ in shop1.values():\n",
+    "        for c2,_,a2 in shop2.values():\n",
+    "            for c3,d3,a3 in shop3.values():\n",
+    "                b = {'hp': 103, 'd': 9, 'a': 2}\n",
+    "                p = {'hp': 100, 'd': d1+d3, 'a': a2+a3}\n",
+    "                while p['hp'] > 0 and b['hp'] > 0:\n",
+    "                    b['hp'] -= max(1, p['d']-b['a'])\n",
+    "                    if b['hp'] <= 0:\n",
+    "                        yield c1+c2+c3\n",
+    "                        break\n",
+    "                    p['hp'] -= max(1, b['d'] - p['a'])\n",
+    "                    \n",
+    "\n",
+    "def p2():\n",
+    "    for c1,d1,_ in shop1.values():\n",
+    "        for c2,_,a2 in shop2.values():\n",
+    "            for (c3,d3,a3),(c4,d4,a4) in combinations(shop3.values(), 2):\n",
+    "                b = {'hp': 103, 'd': 9, 'a': 2}\n",
+    "                p = {'hp': 100, 'd': d1+d3+d4, 'a': a2+a3+a4}\n",
+    "                while p['hp'] > 0 and b['hp'] > 0:\n",
+    "                    b['hp'] -= max(1, p['d']-b['a'])\n",
+    "                    if b['hp'] <= 0:\n",
+    "                        break\n",
+    "                    p['hp'] -= max(1, b['d'] - p['a'])\n",
+    "                else:\n",
+    "                    yield c1+c2+c3+c4\n",
+    "\n",
+    "print(min(p1()))\n",
+    "\n",
+    "print(max(p2()))"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {
     "collapsed": true
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "day = 22\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from collections import Counter, defaultdict\n",
+    "from copy import deepcopy\n",
+    "from functools import reduce, partial\n",
+    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
+    "from operator import add, mul, truediv, floordiv, sub\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "day = 23\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from collections import Counter, defaultdict\n",
+    "from copy import deepcopy\n",
+    "from functools import reduce, partial\n",
+    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
+    "from operator import add, mul, truediv, floordiv, sub\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "day = 24\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from collections import Counter, defaultdict\n",
+    "from copy import deepcopy\n",
+    "from functools import reduce, partial\n",
+    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
+    "from operator import add, mul, truediv, floordiv, sub\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "day = 25\n",
+    "input = get_input(day)\n",
+    "\n",
+    "import numpy as np\n",
+    "import re\n",
+    "from collections import Counter, defaultdict\n",
+    "from copy import deepcopy\n",
+    "from functools import reduce, partial\n",
+    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
+    "from operator import add, mul, truediv, floordiv, sub\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
