--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -98,21 +98,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {
     "collapsed": false,
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "117946\n",
-      "3938038\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 4\n",
     "input = get_input(day)\n",
@@ -723,19 +714,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "886\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 18\n",
     "input = get_input(day)\n",
@@ -776,20 +759,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "509\n",
-      "195\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 19\n",
     "input = get_input(day)\n",
@@ -823,20 +797,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "786240\n",
-      "831600\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 20\n",
     "input = get_input(day)\n",
@@ -859,20 +824,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "121\n",
-      "201\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "day = 21\n",
     "input = get_input(day)\n",
@@ -966,28 +922,80 @@
     "from functools import reduce, partial\n",
     "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
     "from operator import add, mul, truediv, floordiv, sub\n",
-    "\n"
+    "\n",
+    "spells = {\n",
+    "    'MM': ,\n",
+    "    'Dr': ,\n",
+    "    'Sh': ,\n",
+    "    'Po': ,\n",
+    "    'Re': ,\n",
+    "}\n",
+    "\n",
+    "\n",
+    "def p1():\n",
+    "    boss = {'hp': 71, 'd': 10}\n",
+    "    b = {'hp': 71, 'd': 10}\n",
+    "    p = {'hp': 100, 'm':500, 'a': 0}\n",
+    "    while p['hp'] > 0 and b['hp'] > 0:\n",
+    "        b['hp'] -= max(1, p['d']-b['a'])\n",
+    "        if b['hp'] <= 0:\n",
+    "            break\n",
+    "        p['hp'] -= max(1, b['d'] - p['a'])\n",
+    "\n",
+    "print(p1())"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1, 'b': 170}\n",
+      "{'a': 1, 'b': 247}\n"
+     ]
+    }
+   ],
    "source": [
     "day = 23\n",
     "input = get_input(day)\n",
     "\n",
-    "import numpy as np\n",
     "import re\n",
-    "from collections import Counter, defaultdict\n",
-    "from copy import deepcopy\n",
-    "from functools import reduce, partial\n",
-    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
-    "from operator import add, mul, truediv, floordiv, sub\n",
-    "\n"
+    "\n",
+    "instrs = [x for x in re.findall('^(\\w+) (\\S+)(?:, (\\S+))?$', input, re.M)]\n",
+    "\n",
+    "def day23(a, b):\n",
+    "    m = {\n",
+    "        'a': a,\n",
+    "        'b': b,\n",
+    "    }\n",
+    "    i = 0\n",
+    "    while 0 <= i < len(instrs):\n",
+    "        inst, r, f = instrs[i]\n",
+    "        if inst == 'hlf':\n",
+    "            m[r] //= 2\n",
+    "        elif inst == 'tpl':\n",
+    "            m[r] *= 3\n",
+    "        elif inst == 'inc':\n",
+    "            m[r] += 1\n",
+    "        elif inst == 'jmp':\n",
+    "            i += int(r) - 1\n",
+    "        elif inst == 'jie':\n",
+    "            if m[r] % 2 == 0:\n",
+    "                i += int(f) - 1\n",
+    "        elif inst == 'jio':\n",
+    "            if m[r] == 1:\n",
+    "                i += int(f) - 1\n",
+    "        i += 1\n",
+    "    return m\n",
+    "\n",
+    "print(day23(0, 0))\n",
+    "print(day23(1, 0))"
    ]
   },
   {
