--- a/Python/Advent of Code.ipynb
+++ b/Python/Advent of Code.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {
     "collapsed": true
    },
@@ -913,36 +913,7 @@
    "outputs": [],
    "source": [
     "day = 22\n",
-    "input = get_input(day)\n",
-    "\n",
-    "import numpy as np\n",
-    "import re\n",
-    "from collections import Counter, defaultdict\n",
-    "from copy import deepcopy\n",
-    "from functools import reduce, partial\n",
-    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
-    "from operator import add, mul, truediv, floordiv, sub\n",
-    "\n",
-    "spells = {\n",
-    "    'MM': ,\n",
-    "    'Dr': ,\n",
-    "    'Sh': ,\n",
-    "    'Po': ,\n",
-    "    'Re': ,\n",
-    "}\n",
-    "\n",
-    "\n",
-    "def p1():\n",
-    "    boss = {'hp': 71, 'd': 10}\n",
-    "    b = {'hp': 71, 'd': 10}\n",
-    "    p = {'hp': 100, 'm':500, 'a': 0}\n",
-    "    while p['hp'] > 0 and b['hp'] > 0:\n",
-    "        b['hp'] -= max(1, p['d']-b['a'])\n",
-    "        if b['hp'] <= 0:\n",
-    "            break\n",
-    "        p['hp'] -= max(1, b['d'] - p['a'])\n",
-    "\n",
-    "print(p1())"
+    "input = get_input(day)\n"
    ]
   },
   {
@@ -1000,23 +971,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "11266889531\n",
+      "77387711\n"
+     ]
+    }
+   ],
    "source": [
     "day = 24\n",
-    "input = get_input(day)\n",
     "\n",
-    "import numpy as np\n",
-    "import re\n",
-    "from collections import Counter, defaultdict\n",
-    "from copy import deepcopy\n",
-    "from functools import reduce, partial\n",
-    "from itertools import count, takewhile, accumulate, repeat, cycle, islice, chain, combinations, permutations\n",
-    "from operator import add, mul, truediv, floordiv, sub\n",
-    "\n"
+    "from functools import reduce\n",
+    "from itertools import combinations\n",
+    "from operator import mul\n",
+    "\n",
+    "wts = [int(x) for x in get_input(day).split('\\n')]\n",
+    "\n",
+    "def day24(num_groups):\n",
+    "    group_size = sum(wts) // num_groups\n",
+    "    for i in range(len(wts)):\n",
+    "        qes = [reduce(mul, c) for c in combinations(wts, i) \n",
+    "              if sum(c) == group_size]\n",
+    "        if qes:\n",
+    "            return min(qes)\n",
+    "\n",
+    "print(day24(3))\n",
+    "print(day24(4))"
    ]
   },
   {
